--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -52,5 +53,11 @@ dependencies {
 
     //places autocomplete
     implementation 'com.google.android.libraries.places:places:2.2.0'
+
+    // Adding Location Dependency
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    // Adding Google Maps Dependency
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.github.jd-alexander:library:1.1.0'
 
 }
