--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ahmed.adel.sleeem.clowyy.triptracker">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the "MyLocation" functionality.
-    -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -19,27 +14,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TripTracker">
 
-        <activity android:name=".TripsMapActivity">
-
-        </activity>
-        <activity android:name=".SplashScreenActivity">
+        <activity android:name=".TripsMapActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".SplashScreenActivity">
+
         </activity>
         <activity android:name=".HistoryActivity" />
         <activity android:name=".Register" />
         <activity android:name=".Login"></activity>
         <activity android:name=".TripActivity">
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
 
         </activity>
         <activity android:name=".MainActivity">
