--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 
 dependencies {
 
+
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
@@ -42,9 +43,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.firebase:firebase-database'
 
     //roomingDB
     def room_version = "2.2.6"
@@ -54,5 +60,17 @@ dependencies {
 
     //places autocomplete
     implementation 'com.google.android.libraries.places:places:2.2.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
+    // Adding Location Dependency
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    // Adding Google Maps Dependency
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.github.jd-alexander:library:1.1.0'
 
 }
