testing phase one

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TripTracker">
 
-        <activity android:name=".TripsMapActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity
+            android:name=".TripsMapActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
@@ -34,21 +45,26 @@
         <activity
             android:name=".Dialog"
             android:theme="@android:style/Theme.Translucent" />
-        <activity android:name=".SplashScreenActivity"
-            android:theme="@style/Theme.TripTracker.NoActionBar" >
+
+        <activity
+            android:name=".SplashScreenActivity"
+            android:theme="@style/Theme.TripTracker.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HistoryActivity" />
+
+
         <activity android:name=".Register" />
         <activity android:name=".Login">
             <meta-data
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/google_maps_key" />
         </activity>
+
+
         <activity android:name=".TripActivity">
 
             <!-- <intent-filter> -->
