--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.firebase:firebase-database'
 
     //roomingDB
     def room_version = "2.2.6"
@@ -64,5 +65,17 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
+    // Adding Location Dependency
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    // Adding Google Maps Dependency
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.github.jd-alexander:library:1.1.0'
+
+    // Facebook SDK
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
+    // Circle Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
