--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.github.jd-alexander:library:1.1.0'
 
+
+    //facebook
+
+
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
+
+
+
 }
